fix(font): font icon vertical-align  use baseline

--- a/themes/font.less
+++ b/themes/font.less
@@ -22,7 +22,7 @@
   line-height: 1;
   font-size: inherit;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: baseline;
   // vertical-align: -17%;
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
